# dl4se

./: README.md  init.sh  pyproject.toml
.devcontainer/: checkGPU.py  devcontainer.json  docker-compose.yml  resetGPUonContainer.sh
.devcontainer/environment/ubuntu/: Dockerfile.gpu
.devcontainer/environment/ubuntu/library-scripts/: common-debian.sh  docker-debian.sh  python-debian.sh
